@@ -41,6 +41,8 @@ Version 1.4.23 - SVN
   - Added option that allows users to have replies to their own
     messages sent to the recipient of the previous message (#3520988).
   - Added Solarized Light and Solarized Dark themes, by Pavneet Arora.
+  - Added associative edit list option widget, with optional folder
+    list selector for values
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
